[package]
name = "scratchpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "0.14.19", features = ["full"]}
tokio = { version = "1.19.1", features = ["full"]}
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"