[package]
name = "sdwan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="0.14.17", features=["full"]}
hyper-tls = "0.5.0"
tokio = { version="1.17.0", features=["full"] }
pretty_env_logger = "0.4.0"